--- a/LocalDisasterPreventionInformationApp/Resources/Strings/AppResources.ko.resx
+++ b/LocalDisasterPreventionInformationApp/Resources/Strings/AppResources.ko.resx
@@ -82,6 +82,14 @@
     <value>아래 내용으로 괜찮으신가요?</value>
   </data>
 
+	<data name="Reg_FuriganaLabel" xml:space="preserve">
+  <value>후리가나</value>
+</data>
+
+	<data name="Reg_AddressType" xml:space="preserve">
+  <value>주소 유형</value>
+</data>
+
 	<!-- ヘッダー -->
 	<data name="Header_AppTitle" xml:space="preserve">
     <value>지역 방재 정보 앱</value>
@@ -145,6 +153,14 @@
     <value>편집</value>
   </data>
 
+	<data name="Btn_Discard" xml:space="preserve">
+  <value>폐기</value>
+</data>
+
+	<data name="Btn_Confirm" xml:space="preserve">
+  <value>확정</value>
+</data>
+
 	<!-- 備蓄管理 -->
 	<data name="Stock_ExpireOrder" xml:space="preserve">
     <value>유통기한 순</value>
@@ -185,5 +201,20 @@
 	<data name="Stock_Delete" xml:space="preserve">
     <value>삭제</value>
   </data>
+<!-- トップページ -->
+	<data name="Top_ShelterList" xml:space="preserve">
+  <value>대피소 목록</value>
+</data>
+<!-- ハザードマップ -->
+	<data name="Hazard_Earthquake" xml:space="preserve">
+  <value>지진 위험 지도</value>
+</data>
 
+	<data name="Hazard_Tsunami" xml:space="preserve">
+  <value>쓰나미 위험 지도</value>
+</data>
+
+	<data name="Hazard_FloodLandslide" xml:space="preserve">
+  <value>산사태·홍수 위험 지도</value>
+</data>
 </root>
